--- a/SukudoUI/SukudoUI.csproj
+++ b/SukudoUI/SukudoUI.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MaterialDesignThemes" Version="4.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SukudoSolver\SukudoSolver.csproj" />
+  </ItemGroup>
+
 </Project>
